--- a/app/src/main/res/layout/layout_show_sports_book.xml
+++ b/app/src/main/res/layout/layout_show_sports_book.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="horizontal">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="160dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:padding="5dp"
-        android:layout_marginLeft="5dp"
-        app:cardCornerRadius="10dp"
-        >
+        app:cardCornerRadius="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,37 +21,37 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/image_prog2"
+                android:id="@+id/image_show_book"
                 android:layout_width="150dp"
                 android:layout_height="match_parent"
+                android:paddingBottom="10dp"
                 android:scaleType="centerCrop"
-                android:padding="10dp"
                 app:srcCompat="@drawable/content" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
                 android:orientation="vertical">
-                <TextView
-                    android:id="@+id/name_prog2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="21dp"
-                    android:textColor="#000"
-                    android:padding="5dp"
-                    android:fontFamily="@font/wg"
-                    android:text="learn python learn python learn python " />
 
                 <TextView
-                    android:id="@+id/title_prog2"
+                    android:id="@+id/name_show_book"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:padding="5dp"
                     android:fontFamily="@font/wg"
-                    android:text="ahmed omara" />
+                    android:padding="5dp"
+                    android:text="learn python learn python learn python "
+                    android:textColor="#000"
+                    android:textSize="18dp" />
+
+                <TextView
+                    android:id="@+id/title_show_book"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/wg"
+                    android:padding="5dp"
+                    android:text="ahmed omara"
+                    android:textSize="18dp" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
 </LinearLayout>
